2004-03-10  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (list_mtime_data_func): Use an
	untranslatable "%x" for dates, rather than a custom format.  Fixes
	#136357.

2004-03-10  Morten Welinder  <terra@gnome.org>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_add_shortcut_folder): Test validity of
	path here.
	(shortcuts_insert_path): Don't check here.
	(get_file_info): Barf if name-only fails.

	* tests/testfilechooser.c (main): Add support for --multiple.

Wed Mar 10 02:41:05 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c: (gtk_path_bar_init), (gtk_path_bar_class_init),
	(remove_settings_signal), (gtk_path_bar_dispose),
	(gtk_path_bar_style_set), (gtk_path_bar_screen_changed),
	(gtk_path_bar_scroll_up), (reload_icons), (change_icon_theme),
	(settings_notify_cb), (gtk_path_bar_check_icon_theme),
	(get_button_image), (gtk_path_bar_update_button_appearance),
	(make_directory_button), (gtk_path_bar_check_parent_path): Support
	changes in icon themes.

	* gtk/gtkpathbar.h: add two elements

	* tests/testfilechooser.c: (main): use gnome-vfs method again to
	get more testing.

Wed Mar 10 01:17:40 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c: added 'Desktop' to the list of volumes.  We
	don't have any more untranlated strings in the dialog.

Wed Mar 10 00:24:24 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (error_dialog): use uri instead of
	the pathname for UTF-8 safety.

Wed Mar 10 00:10:47 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (shortcuts_insert_path): Always
	check to see if the shortcuts exists.  We don't want to put
	invalid dirs in the shortcuts pane.

Tue Mar  9 16:40:34 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (struct _GtkFileChooserDefault):
	remove unneeded shortuts_swin;

Wed Mar 10 01:49:27 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #136614 in a better way:
	